# langchain-demo

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  PROGRESS.md  README.md  deploy.sh  docker-compose.yml  nixpacks.toml  param_guide.py  pyproject.toml  server.py
.planning/: ROADMAP.md  STATE.md
.planning/notes/: personal-wechat-knowledge-base.md
.planning/phases/02-html/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-04-PLAN.md  02-CONTEXT.md  02-RESEARCH.md  02-VALIDATION.md
.planning/todos/pending/: incremental-ingestion-dedup.md  wechat-html-cleaning-strategy.md
backend/: main.py  param_guide.py  server.py
backend/src/agent/: agent.py
backend/src/rag/: embeddings.py  splitter.py  vectorstore.py
backend/src/tools/: __init__.py  knowledge.py
data/chroma_db/: chroma.sqlite3
docs/superpowers/plans/: 2026-05-28-rag-knowledge-base.md  2026-06-28-local-rag-classifier.md
docs/superpowers/specs/: 2026-05-28-rag-knowledge-base-design.md  2026-06-28-local-rag-classifier-design.md
frontend/: .env.production  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/public/: 员工手册.md
frontend/src/: App.css  App.tsx  ChatPanel.tsx  KnowledgePanel.tsx  LockScreen.tsx  index.css
src/agent/: __init__.py  agent.py
src/config/: settings.py
src/rag/: __init__.py  classifier.py  cleaner.py  dedup.py  document_loader.py  embeddings.py  pipeline.py  vectorstore.py
src/tools/: __init__.py  calculator.py  knowledge.py  search.py  weather.py  web_fetch.py
tests/: test_classifier.py  test_cleaner.py  test_dedup.py  test_document_loader.py  test_pipeline.py  test_vectorstore.py  test_weather_tool.py
tests/fixtures/: wechat_sample.html  wechat_sample_gbk.html
