[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "my-app-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "chardet>=7.4.3",
    "docx2txt>=0.8",
    "fastapi>=0.115.0",
    "langchain>=1.3.2",
    "langchain-chroma>=0.1.0",
    "langchain-community>=0.0.1",
    "langchain-huggingface>=0.1.0",
    "langchain-openai>=1.2.2",
    "langchain-text-splitters>=0.0.1",
    "lxml>=6.1.1",
    "openpyxl>=3.1.0",
    "pymupdf>=1.23.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.29",
    "sentence-transformers>=2.2.0",
    "simpleeval>=0.9.13",
    "uvicorn>=0.34.0",
    # RAG 依赖
    "chromadb>=0.4.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
