[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "my-app-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "chardet>=7.4.3",
    "fastapi>=0.115.0",
    "langchain>=1.3.2",
    "langchain-community>=0.0.1",
    "langchain-openai>=1.2.2",
    "langchain-text-splitters>=0.0.1",
    "lxml>=6.1.1",
    "pymupdf>=1.23.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.29",
    "uvicorn>=0.34.0",
    # RAG:Cloud 端用 chromadb>=1.5.0 提供 CloudClient / Schema / Search / Rrf API
    # 不再需要 langchain-chroma / langchain-huggingface / sentence-transformers:
    # 嵌入由 Chroma Cloud 托管(Qwen dense + Splade sparse),本机不烘模型。
    "chromadb>=1.5.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
