[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "my-app-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "chardet>=7.4.3",
    "fastapi>=0.115.0",
    "langchain>=1.3.2",
    "langchain-community>=0.0.1",
    "langchain-openai>=1.2.2",
    "langchain-text-splitters>=0.0.1",
    "lxml>=6.1.1",
    "numpy>=1.26",
    "pymupdf>=1.23.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.29",
    "scikit-learn>=1.4",
    "sentence-transformers>=3.0",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
